--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,9 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 
-# testing
-/coverage
-
-# production
-/build
+# Firebase
+.firebaserc
+firebase.json
 
 # misc
 .DS_Store
@@ -15,6 +11,9 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.idea/vcs.xml
+.idea/workspace.xml
+.vscode/
 
 npm-debug.log*
 yarn-debug.log*
