--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
 # dependencies
 /node_modules
 
-# Firebase
-.firebaserc
-firebase.json
+# testing
+/coverage
+
+# production
+/build
 
 # misc
 .DS_Store
@@ -11,9 +15,6 @@ firebase.json
 .env.development.local
 .env.test.local
 .env.production.local
-.idea/vcs.xml
-.idea/workspace.xml
-.vscode/
 
 npm-debug.log*
 yarn-debug.log*
